# sample-bedrock-mcp

./: .gitignore  README.md  pyproject.toml
src/mcp/: server.py
src/ui/: __init__.py  app.py
src/utils/: bedrock.py  databricks.py  models.py  stream_handler.py
